<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade2"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/total_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/mundo_verde"
        android:textColor="@color/cinza"
        android:textSize="30sp"
         />

    <TextView
        android:id="@+id/Perguntatxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/chq"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/pergunta_por_completo"
        android:textAlignment="center"
        android:textColor="@color/cinza"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/chq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/Ans_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/alternativa_a"
            android:textColor="@color/black"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/Ans_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/alternativa_b"
            android:textColor="@color/black"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/Ans_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/alternativa_c"
            android:textColor="@color/black"
            tools:ignore="TextSizeCheck,TextSizeCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/Ans_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alternativa_d"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
        <Button
            android:id="@+id/btn_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:textColor="@color/white"
            android:backgroundTint="@color/vinho"
            android:layout_below="@id/chq"
            android:layout_marginTop="30dp"
            tools:ignore="VisualLintButtonSize" />
</RelativeLayout>