<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade1"
    android:padding="24dp"
    tools:context=".Contato">

    <ImageView
        android:id="@+id/voltarcnt"
        android:layout_width="50sp"
        android:layout_height="100sp"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="ImageContrastCheck"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/ttcnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/voltarcnt"
        android:text="@string/contato"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/txt4cnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_jefersonayresaraujo_gmail_com"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/voltarcnt"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/txt5cnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_mero_11_96873_4494"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/txt4cnt"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/txt6cnt"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt5cnt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:importantForAutofill="no"
        android:hint="@string/avalie_nos"
        android:textColorHint="@color/cinza"

        android:textSize="28sp"
        tools:ignore="LabelFor,TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Questionary1"
        android:layout_width="210sp"
        android:layout_height="70sp"
        android:layout_below="@id/txt6cnt"
        android:layout_marginStart="0sp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_button"
        android:padding="0dp"
        android:text="@string/butaocnt"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>