<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnresolvableTag, AndroidUnknownAttribute -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    android:padding="24dp"
    tools:context=".Home">


    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/mundoverde"
        android:textColor="@color/tthome"
        android:textSize="35sp"
        tools:ignore="RelativeOverlap,TextContrastCheck" />

    <ImageView
        android:id="@+id/Sobre"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/Logo"
        android:importantForAccessibility="no"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Questionary1"
        android:layout_width="300sp"
        android:layout_height="100sp"
        android:layout_below="@id/Logo"
        android:layout_marginStart="0sp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_button"
        android:padding="15dp"
        android:text="@string/quiz_sustentabilidade"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="17sp"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Questionary2"
        android:layout_width="300sp"
        android:layout_height="100sp"
        android:layout_below="@+id/Questionary1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_button"
        android:padding="15dp"
        android:text="@string/em_breve"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Questionary3"
        android:layout_width="300sp"
        android:layout_height="100sp"
        android:layout_below="@+id/Questionary2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_button"
        android:padding="15dp"
        android:text="@string/embreve"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/contato"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@id/Questionary3"
        android:text="@string/conosco"
        android:textAlignment="center"
        android:textColor="@color/cinza"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck,TextContrastCheck" />
</RelativeLayout>